<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.entrophy.ConnectionSet">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/background_gray">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/chevron_left"
                android:textAlignment="center"
                android:id="@+id/back_button"
                android:layout_marginLeft="20dp"
                android:textSize="16sp"
                android:visibility="visible"
                android:textColor="@color/green"
                android:layout_gravity="center_vertical" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/dark_gray"
                android:layout_centerHorizontal="true"
                android:textSize="20dp"
                android:id="@+id/title_val"
                android:textStyle="bold"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="0.5dp"
                android:background="@color/dark_gray"></View>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="34sp"
                android:id="@+id/header_label"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:text="You’re All Set!" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:textSize="16dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textAlignment="center"
                android:textColor="#99000000"
                android:gravity="center_horizontal"
                android:text="@string/all_set_1"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:textSize="16dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textAlignment="center"
                android:textColor="#99000000"
                android:gravity="center_horizontal"
                android:text="@string/all_set_2"></TextView>

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:id="@+id/bottom_text"
        android:layout_above="@+id/done"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textAlignment="center"
        android:textColor="#99000000"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:text="@string/all_set_3"></TextView>

    <Button
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:textColor="@color/green"
        android:background="@android:color/transparent"
        android:id="@+id/skip"
        android:visibility="gone"
        android:text="SKIP"
        android:layout_alignTop="@+id/done"
        android:layout_alignLeft="@+id/done"
        android:layout_alignStart="@+id/done"
        android:layout_marginTop="60dp" />
    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="DONE"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_button_green"
        android:textColor="@color/white"
        android:id="@+id/done"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
