<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.entrophy.WelcomePage">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"

        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="34sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:text="Welcome\n Entrophy!" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textSize="18dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textAlignment="center"
            android:textColor="@color/dark_gray"
            android:gravity="center_horizontal"
            android:text="@string/welcome_page_Share_your_Like"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/accept_rel"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:id="@+id/terms_condition"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textAlignment="center"
            android:textColor="@color/light_gray"
            android:gravity="center_horizontal"
            android:text="@string/welcome_page_accept"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textAlignment="center"
            android:textColor="@color/light_blue"
            android:gravity="center_horizontal"
            android:text="@string/welcome_page_Entrophy_Terms"></TextView>
    </LinearLayout>


    <ImageView
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:paddingTop="30dp"
        android:tint="@color/green"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/location_green" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:id="@+id/accept_rel"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_button_green"
            android:textColor="@color/white"
            android:id="@+id/accept_continue"
            android:textSize="14sp"
            android:layout_marginTop="30dp"
            android:text="ACCEPT &amp; CONTINUE"/>

    </RelativeLayout>
</RelativeLayout>
