<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.entrophy.InviteOthers">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/header"
        android:background="@color/background_gray">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:id="@+id/title_val"
            android:textStyle="bold"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="0.5dp"
            android:background="@color/dark_gray"></View>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:text="@string/invite_oters"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/dark_gray"
        android:text="@string/invite_oters_2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/dark_gray"
        android:text="Please choose a service"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="60dp"
            android:id="@+id/whats_app"
            android:src="@drawable/whats_app_icon"
            android:layout_height="60dp" />
        <ImageView
            android:layout_width="35dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/message"
            android:layout_marginLeft="30dp"
            android:src="@drawable/message_icon"
            android:layout_height="35dp" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/dark_gray"
        android:text="Charges may apply"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/later"
        android:textColor="@color/dark_gray"
        android:text="I\'ll do it later"/>

</LinearLayout>
